--- a/index.html
+++ b/index.html
@@ -2,36 +2,78 @@
 <html lang="en">
 <head>
   <meta charset="utf-8" />
-  <meta
-    name="viewport"
-    content="width=device-width, initial-scale=1, viewport-fit=cover"
-  />
-  <title>Webex Connect Chat – Demo</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
+  <title>Webex Connect Chat – CX Advanced Solutions Demo</title>
+
   <style>
-    body { font-family: system-ui, Arial, sans-serif; margin: 0; padding: 2rem; }
-    .wrap { max-width: 900px; margin: 0 auto; }
-    h1 { margin: 0 0 0.5rem 0; }
-    p { margin: 0 0 1rem 0; color: #444; }
-    .note { background: #f6f8fa; border: 1px solid #eaecef; padding: 1rem; border-radius: 8px; }
+    /* Reset and base styling */
+    html, body {
+      height: 100%;
+      margin: 0;
+      font-family: "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
+      color: #fff;
+      text-align: center;
+      overflow: hidden;
+    }
+
+    /* Background image */
+    body {
+      background: url("Chrome%20Wallpaper.png") no-repeat center center fixed;
+      background-size: cover;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
+
+    /* Overlay to improve contrast */
+    .overlay {
+      position: absolute;
+      top: 0; left: 0; right: 0; bottom: 0;
+      background: rgba(0, 0, 0, 0.55);
+      z-index: 0;
+    }
+
+    /* Main content */
+    .content {
+      position: relative;
+      z-index: 1;
+      max-width: 800px;
+      padding: 2rem 3rem;
+      border-radius: 12px;
+      background: rgba(255, 255, 255, 0.1);
+      backdrop-filter: blur(10px);
+      box-shadow: 0 0 20px rgba(0, 0, 0, 0.3);
+    }
+
+    h1 {
+      font-size: 2rem;
+      margin-bottom: 0.5rem;
+      letter-spacing: 1px;
+    }
+
+    p {
+      font-size: 1.1rem;
+      color: #ccc;
+    }
   </style>
 </head>
+
 <body>
-  <div class="wrap">
+  <div class="overlay"></div>
+  <div class="content">
     <h1>Webex Connect Chat Demo</h1>
-    <p class="note">
-      This page only exists to host the widget for a demo. Open your browser devtools (Console/Network) if the bubble doesn’t appear.
-    </p>
+    <p>Hosted by CX Advanced Solutions</p>
+    <p>Interact with the chat widget in the lower right corner.</p>
   </div>
 
-  <!-- Your widget mount element + loader (unchanged except for formatting) -->
+  <!-- Webex Connect Widget -->
   <div id="divicw"
        data-bind="ABFE97A4-B352-40AE-92B5-E64558B39443"
-       data-org="" 
+       data-org=""
        data-guid="7ad20415-02d9-4c4e-a4ae-c5229f8f5266">
   </div>
 
   <script>
-    // Original loader, just spaced for readability
     var i = {
       t: function () {
         var u = "https://media.imi.chat/widget/js/imichatinit.js";
@@ -40,10 +82,7 @@
           x.onreadystatechange = function () {
             if (this.readyState == 4) {
               var host = document.getElementById("divicw");
-              if (this.status == 0) {
-                i.o(host);
-                return;
-              }
+              if (this.status == 0) { i.o(host); return; }
               var s = document.createElement("script");
               s.innerHTML = this.responseText;
               host.parentNode.insertBefore(s, host.nextSibling);
@@ -51,14 +90,11 @@
           };
           x.open("GET", u, true);
           x.send();
-        } catch (e) {
-          console.error(e);
-        }
+        } catch (e) { console.error(e); }
       },
       o: function (host) {
-        host.insertAdjacentHTML(
-          "afterend",
-          '<iframe id="tls_al_frm" frameborder="0" style="overflow:hidden;height:208px;width:394px;position:fixed;display:block;right:48px;bottom:12px;z-index:99999;display:none;"></iframe>'
+        host.insertAdjacentHTML("afterend",
+          '<iframe id="tls_al_frm" frameborder="0" style="overflow:hidden;height:208px;width:394px;position:fixed;right:48px;bottom:12px;z-index:99999;display:none;"></iframe>'
         );
         var f = document.getElementById("tls_al_frm");
         var w = f.contentWindow || (f.contentDocument.document || f.contentDocument);
