Update hosted by text in index.html

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
   <div class="overlay"></div>
   <div class="content">
     <h1>Webex Connect Chat Demo</h1>
-    <p>Hosted by CX Advanced Solutions</p>
+    <p>Hosted by Me CX Advanced Solutions</p>
     <p>Interact with the chat widget in the lower right corner.</p>
   </div>
 
