--- a/index.html
+++ b/index.html
@@ -3,77 +3,75 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
-  <title>Webex Connect Chat – CX Advanced Solutions Demo</title>
+  <title>Webex Connect Chat – Demo</title>
 
   <style>
-    /* Reset and base styling */
-    html, body {
-      height: 100%;
-      margin: 0;
+    /* Base */
+    html, body { height: 100%; margin: 0; }
+    body {
+      position: relative; /* anchor for absolute children */
       font-family: "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
       color: #fff;
-      text-align: center;
+      background: url("Chrome%20Wallpaper.png") no-repeat center center fixed;
+      background-size: cover;
       overflow: hidden;
     }
 
-    /* Background image */
-    body {
-      background: url("Chrome%20Wallpaper.png") no-repeat center center fixed;
-      background-size: cover;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-    }
-
-    /* Overlay to improve contrast */
-    .overlay {
-      position: absolute;
-      top: 0; left: 0; right: 0; bottom: 0;
-      background: rgba(0, 0, 0, 0.55);
-      z-index: 0;
-    }
-
-    /* Main content */
+    /* Content card — absolutely positioned relative to <body> */
     .content {
-      position: relative;
-      z-index: 1;
+      position: absolute !important;
+      top: 14vh !important;     /* <<< move it here: smaller = higher, larger = lower */
+      left: 50%;
+      transform: translateX(-50%);
       max-width: 800px;
+      width: calc(100% - 48px);
       padding: 2rem 3rem;
-      border-radius: 12px;
-      background: rgba(255, 255, 255, 0.1);
-      backdrop-filter: blur(10px);
-      box-shadow: 0 0 20px rgba(0, 0, 0, 0.3);
+      background: transparent !important;
+      box-shadow: none !important;
+      text-align: center;
+      opacity: 0;
+      animation: fadeIn 1.1s ease forwards;
     }
 
     h1 {
+      margin: 0 0 .5rem 0;
       font-size: 2rem;
-      margin-bottom: 0.5rem;
-      letter-spacing: 1px;
+      letter-spacing: .5px;
+      text-shadow: 0 0 8px rgba(0,0,0,.4);
+    }
+    p {
+      margin: .25rem 0;
+      color: #e0e0e0;
+      text-shadow: 0 0 6px rgba(0,0,0,.3);
+      font-size: 1.05rem;
     }
 
-    p {
-      font-size: 1.1rem;
-      color: #ccc;
+    /* Keep widget on top just in case */
+    #divicw, #divicw * { z-index: 100000; position: relative; }
+
+    @keyframes fadeIn {
+      from { opacity: 0; transform: translate(-50%, 10px); }
+      to   { opacity: 1; transform: translate(-50%, 0); }
     }
   </style>
 </head>
 
 <body>
-  <div class="overlay"></div>
+  <!-- Visible content -->
   <div class="content">
     <h1>Webex Connect Chat Demo</h1>
     <p>Hosted by CX Advanced Solutions</p>
-    <p>Interact with the chat widget in the lower right corner.</p>
+    <p>Chat bubble is in the lower-right.</p>
   </div>
 
   <!-- Webex Connect Widget -->
   <div id="divicw"
        data-bind="ABFE97A4-B352-40AE-92B5-E64558B39443"
        data-org=""
-       data-guid="7ad20415-02d9-4c4e-a4ae-c5229f8f5266">
-  </div>
+       data-guid="7ad20415-02d9-4c4e-a4ae-c5229f8f5266"></div>
 
   <script>
+    /* Your original loader unchanged */
     var i = {
       t: function () {
         var u = "https://media.imi.chat/widget/js/imichatinit.js";
