--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       position: relative; /* anchor for absolute children */
       font-family: "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
       color: #fff;
-      background: url("Chrome%20Wallpaper.png") no-repeat center center fixed;
+      background: url("Chat_Demo_Wallpaper.png") no-repeat center center fixed;
       background-size: cover;
       overflow: hidden;
     }
