--- a/index.html
+++ b/index.html
@@ -2,76 +2,36 @@
 <html lang="en">
 <head>
   <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
+  <meta
+    name="viewport"
+    content="width=device-width, initial-scale=1, viewport-fit=cover"
+  />
   <title>Webex Connect Chat – Demo</title>
-
   <style>
-    /* Base */
-    html, body { height: 100%; margin: 0; }
-    body {
-      position: relative; /* anchor for absolute children */
-      font-family: "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
-      color: #fff;
-      background: url("Chat_Demo_Wallpaper.png") no-repeat center center fixed;
-      background-size: cover;
-      overflow: hidden;
-    }
-
-    /* Content card — absolutely positioned relative to <body> */
-    .content {
-      position: absolute !important;
-      top: 14vh !important;     /* <<< move it here: smaller = higher, larger = lower */
-      left: 50%;
-      transform: translateX(-50%);
-      max-width: 800px;
-      width: calc(100% - 48px);
-      padding: 2rem 3rem;
-      background: transparent !important;
-      box-shadow: none !important;
-      text-align: center;
-      opacity: 0;
-      animation: fadeIn 1.1s ease forwards;
-    }
-
-    h1 {
-      margin: 0 0 .5rem 0;
-      font-size: 2rem;
-      letter-spacing: .5px;
-      text-shadow: 0 0 8px rgba(0,0,0,.4);
-    }
-    p {
-      margin: .25rem 0;
-      color: #e0e0e0;
-      text-shadow: 0 0 6px rgba(0,0,0,.3);
-      font-size: 1.05rem;
-    }
-
-    /* Keep widget on top just in case */
-    #divicw, #divicw * { z-index: 100000; position: relative; }
-
-    @keyframes fadeIn {
-      from { opacity: 0; transform: translate(-50%, 10px); }
-      to   { opacity: 1; transform: translate(-50%, 0); }
-    }
+    body { font-family: system-ui, Arial, sans-serif; margin: 0; padding: 2rem; }
+    .wrap { max-width: 900px; margin: 0 auto; }
+    h1 { margin: 0 0 0.5rem 0; }
+    p { margin: 0 0 1rem 0; color: #444; }
+    .note { background: #f6f8fa; border: 1px solid #eaecef; padding: 1rem; border-radius: 8px; }
   </style>
 </head>
-
 <body>
-  <!-- Visible content -->
-  <div class="content">
+  <div class="wrap">
     <h1>Webex Connect Chat Demo</h1>
-    <p>Hosted by CX Advanced Solutions</p>
-    <p>Chat bubble is in the lower-right.</p>
+    <p class="note">
+      This page only exists to host the widget for a demo. Open your browser devtools (Console/Network) if the bubble doesn’t appear.
+    </p>
   </div>
 
-  <!-- Webex Connect Widget -->
+  <!-- Your widget mount element + loader (unchanged except for formatting) -->
   <div id="divicw"
        data-bind="ABFE97A4-B352-40AE-92B5-E64558B39443"
-       data-org=""
-       data-guid="7ad20415-02d9-4c4e-a4ae-c5229f8f5266"></div>
+       data-org="" 
+       data-guid="7ad20415-02d9-4c4e-a4ae-c5229f8f5266">
+  </div>
 
   <script>
-    /* Your original loader unchanged */
+    // Original loader, just spaced for readability
     var i = {
       t: function () {
         var u = "https://media.imi.chat/widget/js/imichatinit.js";
@@ -80,7 +40,10 @@
           x.onreadystatechange = function () {
             if (this.readyState == 4) {
               var host = document.getElementById("divicw");
-              if (this.status == 0) { i.o(host); return; }
+              if (this.status == 0) {
+                i.o(host);
+                return;
+              }
               var s = document.createElement("script");
               s.innerHTML = this.responseText;
               host.parentNode.insertBefore(s, host.nextSibling);
@@ -88,11 +51,14 @@
           };
           x.open("GET", u, true);
           x.send();
-        } catch (e) { console.error(e); }
+        } catch (e) {
+          console.error(e);
+        }
       },
       o: function (host) {
-        host.insertAdjacentHTML("afterend",
-          '<iframe id="tls_al_frm" frameborder="0" style="overflow:hidden;height:208px;width:394px;position:fixed;right:48px;bottom:12px;z-index:99999;display:none;"></iframe>'
+        host.insertAdjacentHTML(
+          "afterend",
+          '<iframe id="tls_al_frm" frameborder="0" style="overflow:hidden;height:208px;width:394px;position:fixed;display:block;right:48px;bottom:12px;z-index:99999;display:none;"></iframe>'
         );
         var f = document.getElementById("tls_al_frm");
         var w = f.contentWindow || (f.contentDocument.document || f.contentDocument);
