--- a/index.html
+++ b/index.html
@@ -13,10 +13,11 @@
       font-family: "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
       color: #fff;
       text-align: center;
-      overflow: hidden;
+      overflow: hidden; /* prevent page scroll behind chat */
+      background: #000; /* fallback while widget loads */
     }
 
-    /* Background image */
+    /* Background image (kept as a fallback while chat loads) */
     body {
       background: url("Chat_Demo_Wallpaper.png") no-repeat center center fixed;
       background-size: cover;
@@ -28,12 +29,12 @@
     /* Overlay to improve contrast */
     .overlay {
       position: absolute;
-      top: 0; left: 0; right: 0; bottom: 0;
+      inset: 0;
       background: rgba(0, 0, 0, 0.55);
       z-index: 0;
     }
 
-    /* Main content */
+    /* Main content (only visible before the widget mounts) */
     .content {
       position: relative;
       z-index: 1;
@@ -43,17 +44,40 @@
       background: rgba(255, 255, 255, 0.1);
       backdrop-filter: blur(10px);
       box-shadow: 0 0 20px rgba(0, 0, 0, 0.3);
+      transition: opacity .2s ease;
     }
 
-    h1 {
-      font-size: 2rem;
-      margin-bottom: 0.5rem;
-      letter-spacing: 1px;
+    h1 { font-size: 2rem; margin-bottom: 0.5rem; letter-spacing: 1px; }
+    p  { font-size: 1.1rem; color: #ccc; }
+
+    /* --- Full-screen overrides for the Webex Connect widget --- */
+    /* Catch the injected iframe by a few likely patterns. We also mark it with a data-attr once found. */
+    iframe[data-fullscreen-chat="1"],
+    iframe[id^="imi"],                /* common ids like imiChatFrame / imichat-... */
+    iframe[src*="imi.chat"],          /* network host */
+    iframe[src*="imichat"] {
+      position: fixed !important;
+      inset: 0 !important;            /* top/right/bottom/left = 0 */
+      width: 100vw !important;
+      height: 100vh !important;
+      max-width: 100vw !important;
+      max-height: 100vh !important;
+      border: 0 !important;
+      border-radius: 0 !important;
+      box-shadow: none !important;
+      z-index: 2147483647 !important; /* above everything */
     }
 
-    p {
-      font-size: 1.1rem;
-      color: #ccc;
+    /* Hide floating launchers or bubbles the SDK might inject */
+    [class*="launcher"], [id*="launcher"], [data-testid*="launcher"] {
+      display: none !important;
+    }
+
+    /* When the chat goes full-screen, fade out the landing content */
+    .is-chat-fullscreen .overlay,
+    .is-chat-fullscreen .content {
+      opacity: 0;
+      pointer-events: none;
     }
   </style>
 </head>
@@ -63,7 +87,7 @@
   <div class="content">
     <h1>Webex Connect Chat Demo</h1>
     <p>Hosted by CX Advanced Solutions</p>
-    <p>Interact with the chat widget in the lower right corner.</p>
+    <p>Chat opens full-screen.</p>
   </div>
 
   <!-- Webex Connect Widget -->
@@ -74,6 +98,7 @@
   </div>
 
   <script>
+    // --- Load the Webex Connect init script exactly as before ---
     var i = {
       t: function () {
         var u = "https://media.imi.chat/widget/js/imichatinit.js";
@@ -99,19 +124,4 @@
         var f = document.getElementById("tls_al_frm");
         var w = f.contentWindow || (f.contentDocument.document || f.contentDocument);
         w.document.open();
-        w.document.write('<!doctype html><html><head><meta charset="utf-8"><title>Browser Unsupported</title><style>body{font-family:"Helvetica Neue",Helvetica,Arial,sans-serif;color:#99a0b0;font-size:14px}.popover__content{background-color:#fbfbfe;padding:1.5rem;border-radius:5px;width:300px;box-shadow:0 2px 5px rgba(0,0,0,.26);position:relative}.popover__message{font-weight:600;color:#56627c;font-size:16px}.pull-left{float:left}.clearfix{clear:both}.hdr-txt{width:218px;margin-top:3px}.para-txt a{text-decoration:none;color:#005cde}.close-btn{position:absolute;right:15px;top:15px}.close-btn a{text-decoration:none;font-weight:400;color:#56627c;font-size:16px}</style></head><body><div class="popover__content"><div class="close-btn"><a href="#" onclick="closeTLSAlert();">X</a></div><div class="popover__message"><div class="pull-left hdr-txt">This browser version is not supported on LiveChat.</div></div><div class="clearfix"></div><p class="para-txt">Please update your browser to the latest version and re-open the website to access the widget.</p></div><script>function closeTLSAlert(){window.parent.postMessage({key:"close_tls_alert",value:"close_tls_alert",action:"close_tls_alert"},"*");}<\/script></body></html>');
-        w.document.close();
-        f.style.display = "block";
-        window.addEventListener("message", function (e) {
-          if (e.data.action == "close_tls_alert") { i.s(); }
-        });
-      },
-      s: function () {
-        var f = document.getElementById("tls_al_frm");
-        if (f) f.remove();
-      }
-    };
-    i.t();
-  </script>
-</body>
-</html>
+        w.document.write('<!doctype html><html><head><meta charset="utf-8"><title>Browser Unsupported</title><style>body{font-family:"Helvetica Neue",Helvetica,Arial,sans-serif;color:#99a0b0;font-size:14px}.popover__content{background-color:#fbfbfe;padding:1.5rem;border-radius:5px;width:300px;box-shadow:0 2px 5px rgba(0,0,0,.26);position:relative}.popover__message{font-weight:600;color:#56627c;font-size:16px}.pull-left{float:left}.clearfix{clear:both}.hdr-txt{width:218px;margin-top:3px}.para-txt a{text-decoration:none;color:#
