--- a/index.html
+++ b/index.html
@@ -124,4 +124,75 @@
         var f = document.getElementById("tls_al_frm");
         var w = f.contentWindow || (f.contentDocument.document || f.contentDocument);
         w.document.open();
-        w.document.write('<!doctype html><html><head><meta charset="utf-8"><title>Browser Unsupported</title><style>body{font-family:"Helvetica Neue",Helvetica,Arial,sans-serif;color:#99a0b0;font-size:14px}.popover__content{background-color:#fbfbfe;padding:1.5rem;border-radius:5px;width:300px;box-shadow:0 2px 5px rgba(0,0,0,.26);position:relative}.popover__message{font-weight:600;color:#56627c;font-size:16px}.pull-left{float:left}.clearfix{clear:both}.hdr-txt{width:218px;margin-top:3px}.para-txt a{text-decoration:none;color:#
+        w.document.write('<!doctype html><html><head><meta charset="utf-8"><title>Browser Unsupported</title><style>body{font-family:"Helvetica Neue",Helvetica,Arial,sans-serif;color:#99a0b0;font-size:14px}.popover__content{background-color:#fbfbfe;padding:1.5rem;border-radius:5px;width:300px;box-shadow:0 2px 5px rgba(0,0,0,.26);position:relative}.popover__message{font-weight:600;color:#56627c;font-size:16px}.pull-left{float:left}.clearfix{clear:both}.hdr-txt{width:218px;margin-top:3px}.para-txt a{text-decoration:none;color:#005cde}.close-btn{position:absolute;right:15px;top:15px}.close-btn a{text-decoration:none;font-weight:400;color:#56627c;font-size:16px}</style></head><body><div class="popover__content"><div class="close-btn"><a href="#" onclick="closeTLSAlert();">X</a></div><div class="popover__message"><div class="pull-left hdr-txt">This browser version is not supported on LiveChat.</div></div><div class="clearfix"></div><p class="para-txt">Please update your browser to the latest version and re-open the website to access the widget.</p></div><script>function closeTLSAlert(){window.parent.postMessage({key:"close_tls_alert",value:"close_tls_alert",action:"close_tls_alert"},"*");}<\/script></body></html>');
+        w.document.close();
+        f.style.display = "block";
+        window.addEventListener("message", function (e) {
+          if (e.data.action == "close_tls_alert") { i.s(); }
+        });
+      },
+      s: function () {
+        var f = document.getElementById("tls_al_frm");
+        if (f) f.remove();
+      }
+    };
+    i.t();
+
+    // --- Make the widget full-screen whenever it appears ---
+    (function forceFullscreenChat() {
+      // Find the first likely chat iframe.
+      function markAndStretch(node) {
+        try {
+          if (!(node instanceof HTMLIFrameElement)) return false;
+          var src = node.getAttribute("src") || "";
+          var id  = node.id || "";
+          if (src.includes("imi.chat") || src.includes("imichat") || id.toLowerCase().includes("imi")) {
+            node.setAttribute("data-fullscreen-chat", "1");
+            document.documentElement.classList.add("is-chat-fullscreen");
+            // In case inline styles get overwritten later, re-apply after a tick.
+            requestAnimationFrame(() => {
+              Object.assign(node.style, {
+                position: "fixed",
+                top: "0", left: "0", right: "0", bottom: "0",
+                width: "100vw", height: "100vh",
+                maxWidth: "100vw", maxHeight: "100vh",
+                border: "0", borderRadius: "0",
+                boxShadow: "none",
+                zIndex: "2147483647"
+              });
+            });
+            return true;
+          }
+        } catch (e) {}
+        return false;
+      }
+
+      // Try immediately for fast loads.
+      Array.from(document.getElementsByTagName("iframe")).some(markAndStretch);
+
+      // Watch for future iframes (widget injects async).
+      var mo = new MutationObserver((muts) => {
+        muts.forEach(m => {
+          m.addedNodes && Array.from(m.addedNodes).forEach(n => {
+            if (markAndStretch(n)) { /* found */ }
+            // Also scan descendants in case a wrapper div was added.
+            if (n.querySelectorAll) {
+              n.querySelectorAll("iframe").forEach(markAndStretch);
+            }
+          });
+        });
+      });
+      mo.observe(document.documentElement, { childList: true, subtree: true });
+
+      // Keep size pinned on resize/orientation changes.
+      window.addEventListener("resize", () => {
+        const fr = document.querySelector('iframe[data-fullscreen-chat="1"]');
+        if (fr) {
+          fr.style.width = "100vw";
+          fr.style.height = "100vh";
+        }
+      });
+    })();
+  </script>
+</body>
+</html>
